--- a/Airport/wwwroot/css/site.css
+++ b/Airport/wwwroot/css/site.css
@@ -17,21 +17,15 @@ textarea {
     max-width: 280px
 }
 
-/* Carousel */
-.carousel-caption p {
-    font-size: 20px;
-    line-height: 1.4
+
+img {
+    display: block;
+    height: 600px;
+    max-width: 100%
 }
 
-/* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"] {
-    width: 100%
-}
-
-/* Hide/rearrange for smaller screens */
-@media screen and (max-width: 767px) {
-    /* Hide captions */
-    .carousel-caption {
-        display: none
-    }
+.img-responsive {
+    display: block;
+    height: 150;
+    max-width: 100%
 }
